--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="dev.cherry.seacrhanim.MainActivity">
+    android:background="@android:color/background_light">
 
-
-    <AutoCompleteTextView
-        android:id="@+id/fromText"
-        android:layout_width="0dp"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/mainAppBar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="AutoCompleteTextView"/>
-</android.support.constraint.ConstraintLayout>
+        android:fitsSystemWindows="true"
+        android:paddingBottom="32dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:minHeight="?android:attr/actionBarSize"
+            android:title="@string/app_name"/>
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            tools:context="dev.cherry.seacrhanim.presentation.main.MainActivity">
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/formTextInputLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <dev.cherry.seacrhanim.presentation.view.DelayAutoCompleteTextView
+                    android:id="@+id/fromText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/label_sourcePoint"
+                    android:inputType="textAutoComplete|textAutoCorrect|textCapSentences"
+                    android:maxLines="1"
+                    android:paddingEnd="32dp"
+                    android:paddingRight="32dp"
+                    android:popupTheme="@style/PopupTheme"
+                    android:textColor="@color/textColorPrimaryInverse"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <ProgressBar
+                android:id="@+id/fromProgress"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|end"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/formTextInputLayout"
+                app:layout_constraintRight_toRightOf="@+id/formTextInputLayout"
+                app:layout_constraintTop_toTopOf="@+id/formTextInputLayout"/>
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/toTextInputLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/formTextInputLayout">
+
+                <dev.cherry.seacrhanim.presentation.view.DelayAutoCompleteTextView
+                    android:id="@+id/toText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/label_destinationPoint"
+                    android:inputType="textAutoComplete|textAutoCorrect|textCapSentences"
+                    android:maxLines="1"
+                    android:paddingEnd="32dp"
+                    android:paddingRight="32dp"
+                    android:popupBackground="#ffffff"
+                    android:textColor="@color/textColorPrimaryInverse"/>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <ProgressBar
+                android:id="@+id/toProgress"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|right"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/toTextInputLayout"
+                app:layout_constraintRight_toRightOf="@+id/toTextInputLayout"
+                app:layout_constraintTop_toTopOf="@+id/toTextInputLayout"/>
+
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:drawableBottom="@mipmap/ic_launcher_round"
+        android:gravity="center"
+        android:padding="8dp"
+        android:text="@string/label_instructions"
+        android:textSize="20sp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_search"
+        app:layout_anchor="@id/mainAppBar"
+        app:layout_anchorGravity="bottom|right|end"/>
+
+</android.support.design.widget.CoordinatorLayout>
