--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -127,7 +127,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableBottom="@mipmap/ic_launcher_round"
+        android:drawableBottom="@mipmap/ic_launcher"
         android:gravity="center"
         android:text="@string/label_instructions"
         android:textColor="@color/textColorSecondary"
