--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <dev.cherry.seacrhanim.presentation.view.DelayAutoCompleteTextView
-            android:id="@+id/fromText"
+            android:id="@+id/sourceView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/label_sourcePoint"
@@ -48,7 +48,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <ProgressBar
-        android:id="@+id/fromProgress"
+        android:id="@+id/sourceProgress"
         style="?android:attr/progressBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -81,7 +81,7 @@
         app:layout_constraintTop_toBottomOf="@+id/formTextInputLayout">
 
         <dev.cherry.seacrhanim.presentation.view.DelayAutoCompleteTextView
-            android:id="@+id/toText"
+            android:id="@+id/destinationView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/label_destinationPoint"
@@ -94,7 +94,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <ProgressBar
-        android:id="@+id/toProgress"
+        android:id="@+id/destinationProgress"
         style="?android:attr/progressBarStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -108,7 +108,7 @@
         app:layout_constraintVertical_bias="0.35000002"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/searchBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
