added reset focus when destination text is set

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="56dp"
         android:layout_marginTop="0dp"
         android:background="@color/colorPrimary"
+        android:focusableInTouchMode="true"
         android:title="@string/app_name"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
